ecmascript/parser/tests/typescript-errors/tsc/expressions/typeAssertions/typeAssertions/input.ts.stderr
error[1005]: Expected '>'
  --> $DIR/tests/typescript-errors/tsc/expressions/typeAssertions/typeAssertions/input.ts:44:14
   |
44 | if(<numOrStr is string>(numOrStr === undefined)) { // Error
   |              ^^

error[1005]: Expected '>'
  --> $DIR/tests/typescript-errors/tsc/expressions/typeAssertions/typeAssertions/input.ts:48:41
   |
48 | if((numOrStr === undefined) as numOrStr is string) { // Error
   |                                         ^^

